# -C-

./: .gitignore  CMakeLists.txt  README.md  build_release.bat
saper logic/: b.cpp  main.cpp
src/: main.cpp  resource.h  ui_resources.rc
ui/: app.js  index.html  styles.css
